# backend

./: .env.example  .gitignore  CLAUDE.md  DOCKER_GUIDE.md  Dockerfile  README.md  WORK_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3802a276101a_initial_users_and_correction_histories.py
src/: config.py  main.py
src/app/auth/: dependencies.py  jwt.py  oauth.py
src/app/core/middlewares/: cors.py
src/app/db/: session.py
src/app/models/: correction_history.py  user.py
src/app/routers/: auth.py  comment.py  history.py
src/app/schemas/: auth.py  comment.py  history.py
src/app/services/: comment_service.py  history_service.py
test-front/: index.html
tests/: conftest.py  test_auth_endpoints.py  test_comment_endpoints.py  test_history_endpoints.py  test_history_service.py  test_jwt.py
